sg-mysql.tf
resource "aws_security_group" "mysql" {
    name = "mysql"
    description = "mysql network"
    vpc_id = module.vpc.vpc_id

    ingress  {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    
    egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
    description     = "Allow all outside security group"
  }

}
